--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
-  color: #333
+  background: #1e1f24;
+  color: #333;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -8,12 +9,17 @@ body{
 }
 
 #cabecera{
-  background: #33A;
+  background: #37488b; 
   color: white;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
   margin: 0;
   font-weight: bold;
-  padding: 0.5em;
+  padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo {
+  width: 20px;
+  vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -32,4 +38,9 @@ body{
 
 #container h1{
   font-size: 20px;
+}
+
+#post {
+  background: white;
+  padding: 1em;
 }
